--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,6 +1,7 @@
 pipeline {
   agent any
-    stage('Checkout') {
+   stages {
+   stage('Checkout') {
       steps {
         sh 'echo passed'
         //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
@@ -59,4 +60,6 @@ pipeline {
             }
         }
     }
- }
+  }
+}
+	
